WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208691
Implementation of AccessibilitySupport AXSIsolatedTreeMode.
https://bugs.webkit.org/show_bug.cgi?id=208691
Summary
Implementation of AccessibilitySupport AXSIsolatedTreeMode.
Andres Gonzalez
Reported
2020-03-05 20:41:49 PST
Implementation of HIServices AXSIsolatedTreeMode.
Attachments
Patch
(10.46 KB, patch)
2020-03-05 20:51 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(14.16 KB, patch)
2020-03-06 06:15 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(18.07 KB, patch)
2020-03-06 09:53 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(25.27 KB, patch)
2020-03-08 11:54 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(24.30 KB, patch)
2020-03-08 12:40 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(26.55 KB, patch)
2020-03-08 13:37 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-03-05 20:51:26 PST
Created
attachment 392668
[details]
Patch
Andres Gonzalez
Comment 2
2020-03-06 06:15:09 PST
Created
attachment 392714
[details]
Patch
Andres Gonzalez
Comment 3
2020-03-06 09:53:10 PST
Created
attachment 392734
[details]
Patch
WebKit Commit Bot
Comment 4
2020-03-06 18:05:52 PST
The commit-queue encountered the following flaky tests while processing
attachment 392734
[details]
: media/track/track-in-band-metadata-display-order.html
bug 206226
(author:
jer.noble@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2020-03-06 18:06:31 PST
Comment on
attachment 392734
[details]
Patch Clearing flags on attachment: 392734 Committed
r258047
: <
https://trac.webkit.org/changeset/258047
>
WebKit Commit Bot
Comment 6
2020-03-06 18:06:33 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-03-06 18:07:15 PST
<
rdar://problem/60178602
>
Andres Gonzalez
Comment 8
2020-03-07 09:07:07 PST
This change was rolled out due to incompatibility with SDK.
Andres Gonzalez
Comment 9
2020-03-08 11:54:59 PDT
Created
attachment 392965
[details]
Patch
Andres Gonzalez
Comment 10
2020-03-08 11:57:34 PDT
Fixes incompatibility with SDK by softlinking with AccessibilitySupport.
Andres Gonzalez
Comment 11
2020-03-08 12:40:28 PDT
Created
attachment 392975
[details]
Patch
Andres Gonzalez
Comment 12
2020-03-08 13:37:11 PDT
Created
attachment 392980
[details]
Patch
WebKit Commit Bot
Comment 13
2020-03-08 14:49:51 PDT
Comment on
attachment 392980
[details]
Patch Clearing flags on attachment: 392980 Committed
r258115
: <
https://trac.webkit.org/changeset/258115
>
WebKit Commit Bot
Comment 14
2020-03-08 14:49:53 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 15
2020-03-09 09:32:08 PDT
(In reply to WebKit Commit Bot from
comment #14
)
> All reviewed patches have been landed. Closing bug.
I have been having trouble building since this change: Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: error: unknown type name 'AXSIsolatedTreeMode'
Dean Jackson
Comment 16
2020-03-09 09:33:57 PDT
(In reply to Chris Dumez from
comment #15
)
> (In reply to WebKit Commit Bot from
comment #14
) > > All reviewed patches have been landed. Closing bug. > > I have been having trouble building since this change: > Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: > error: unknown type name 'AXSIsolatedTreeMode'
Same here. I don't see AXSIsolatedTreeMode defined anywhere in current or future versions of macOS.
chris fleizach
Comment 17
2020-03-09 09:37:55 PDT
(In reply to Dean Jackson from
comment #16
)
> (In reply to Chris Dumez from
comment #15
) > > (In reply to WebKit Commit Bot from
comment #14
) > > > All reviewed patches have been landed. Closing bug. > > > > I have been having trouble building since this change: > > Source/WebCore/PAL/pal/spi/cocoa/AccessibilitySupportSoftLink.h:36:85: > > error: unknown type name 'AXSIsolatedTreeMode' > > Same here. I don't see AXSIsolatedTreeMode defined anywhere in current or > future versions of macOS.
You would need a recent version of SDK.
Dean Jackson
Comment 18
2020-03-09 09:50:16 PDT
In the future if a change requires an SDK that is newer than a couple of days old, could you email our internal list to let people know? (or, even better, stage it so that people don't need to upgrade).
Saagar Jha
Comment 19
2020-07-02 18:23:23 PDT
Hi, sorry to resurrect a months-old bug, but I'm seeing a build failure suspiciously similar to the one described here when using the public 10.16 SDK. If AXSIsolatedTreeMode is SPI (it looks like it is?) would you mind adding a stub or polyfill of some sort so that I can build WebKit without it?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug