Implementation of AccessibilitySupport AXSIsolatedTreeMode. https://bugs.webkit.org/show_bug.cgi?id=208691

Reviewed by Chris Fleizach.

Source/WebCore:

Support for the AccessibilitySupport AXIsolatedTreMode accessibility setting.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::isolatedTreeFocusedObject):
(WebCore::AXObjectCache::focusedUIElementForPage):
(WebCore::AXObjectCache::isIsolatedTreeEnabled):
(WebCore::AXObjectCache::rootObject):
(WebCore::AXObjectCache::isolatedTreeRootObject):
(WebCore::AXObjectCache::canUseSecondaryAXThread):
* accessibility/AXObjectCache.h:
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase detach]):
(-[WebAccessibilityObjectWrapperBase axBackingObject]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):

Source/WebCore/PAL:

* pal/spi/cocoa/AccessibilitySupportSPI.h:
Added constants and prototypes used in AXIsolatedTreeMode support.

Source/WebKit:

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:
(-[WKAccessibilityWebPageObject accessibilityHitTest:]):
Honors AXIsolatedTreeMode setting.


Canonical link: https://commits.webkit.org/221656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258047 268f45cc-cd09-0410-ab3c-d52691b4dbfc