Source/WebCore/accessibility/AXObjectCache.cpp
@@ -104,6 +104,7 @@
 #include "TextIterator.h"
 
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE) && PLATFORM(MAC)
+#include <pal/spi/cocoa/AccessibilitySupportSPI.h>
 #include <pal/spi/mac/HIServicesSPI.h>
 #endif
 
@@ -392,7 +393,8 @@ AXCoreObject* AXObjectCache::isolatedTreeFocusedObject(Document& document)
         tree = generateIsolatedTree(*pageID, document);
         // Now that we have created our tree, initialize the secondary thread,
         // so future requests come in on the other thread.
-        _AXUIElementUseSecondaryAXThread(true);
+        if (_AXSIsolatedTreeMode() == AXSIsolatedTreeModeSecondaryThread)
+            _AXUIElementUseSecondaryAXThread(true);
     }
 
     if (tree)
@@ -430,7 +432,7 @@ AXCoreObject* AXObjectCache::focusedUIElementForPage(const Page* page)
     focusedDocument->updateStyleIfNeeded();
 
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-    if (clientSupportsIsolatedTree())
+    if (isIsolatedTreeEnabled())
         return isolatedTreeFocusedObject(*focusedDocument);
 #endif
 
@@ -726,6 +728,11 @@ bool AXObjectCache::clientSupportsIsolatedTree()
     return type == kAXClientTypeVoiceOver
         || type == kAXClientTypeUnknown;
 }
+
+bool AXObjectCache::isIsolatedTreeEnabled()
+{
+    return _AXSIsolatedTreeMode() != AXSIsolatedTreeModeOff && clientSupportsIsolatedTree();
+}
 #endif
 
 AXCoreObject* AXObjectCache::rootObject()
@@ -734,7 +741,7 @@ AXCoreObject* AXObjectCache::rootObject()
         return nullptr;
 
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-    if (clientSupportsIsolatedTree())
+    if (isIsolatedTreeEnabled())
         return isolatedTreeRootObject();
 #endif
 
@@ -755,7 +762,8 @@ AXCoreObject* AXObjectCache::isolatedTreeRootObject()
 
         // Now that we have created our tree, initialize the secondary thread,
         // so future requests come in on the other thread.
-        _AXUIElementUseSecondaryAXThread(true);
+        if (_AXSIsolatedTreeMode() == AXSIsolatedTreeModeSecondaryThread)
+            _AXUIElementUseSecondaryAXThread(true);
     }
 
     if (tree)
@@ -776,7 +784,7 @@ bool AXObjectCache::canUseSecondaryAXThread()
     // _AXUIElementRequestServicedBySecondaryAXThread returns false for
     // LayoutTests, but we still want to run LayoutTests using isolated tree on
     // a secondary thread to simulate the actual execution.
-    return clientSupportsIsolatedTree();
+    return _AXSIsolatedTreeMode() == AXSIsolatedTreeModeSecondaryThread && clientSupportsIsolatedTree();
 #else
     return false;
 #endif
